--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "core-js": "^3",
     "expo": "~44.0.0",
     "expo-status-bar": "~1.2.0",
-    "firebase": "^9.6.1",
+    "firebase": "^9.6.5",
     "formik": "^2.2.9",
     "lodash": "^4.17.21",
     "react": "17.0.1",
@@ -28,7 +28,7 @@
     "react-native-animatable": "^1.3.3",
     "react-native-countdown-component": "^2.7.1",
     "react-native-elements": "^3.4.2",
-    "react-native-gesture-handler": "^2.1.0",
+    "react-native-gesture-handler": "~2.1.0",
     "react-native-pager-view": "^5.4.9",
     "react-native-reanimated": "^2.3.1",
     "react-native-safe-area-context": "3.3.2",
