--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@mikezzb/react-native-timetable": "^0.2.3",
+    "@react-native-community/datetimepicker": "^5.1.0",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/bottom-tabs": "^6.0.9",
     "@react-navigation/drawer": "^6.1.8",
@@ -18,27 +20,34 @@
     "@react-navigation/stack": "^6.0.11",
     "core-js": "^3",
     "expo": "~44.0.0",
+    "expo-dev-client": "^0.8.2",
+    "expo-image-picker": "^12.0.1",
     "expo-status-bar": "~1.2.0",
-    "firebase": "^9.6.5",
+    "firebase": "^9.6.1",
     "formik": "^2.2.9",
     "lodash": "^4.17.21",
+    "moment": "^2.29.1",
+    "pod-install": "^0.1.31",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "^0.64.3",
     "react-native-animatable": "^1.3.3",
     "react-native-countdown-component": "^2.7.1",
     "react-native-elements": "^3.4.2",
-    "react-native-gesture-handler": "~2.1.0",
+    "react-native-gesture-handler": "^2.1.0",
     "react-native-pager-view": "^5.4.9",
     "react-native-reanimated": "^2.3.1",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
+    "react-native-simple-radio-button": "^2.7.4",
     "react-native-swiper": "^1.6.0-rc.3",
     "react-native-tab-view": "^3.1.1",
     "react-native-vector-icons": "^9.0.0",
     "react-native-web": "0.17.1",
     "react-navigation": "^4.4.4",
-    "react-navigation-stack": "^2.10.4"
+    "react-navigation-stack": "^2.10.4",
+    "watchman": "^1.0.0",
+    "yarn": "^1.22.17"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
