--- a/.github/workflows/test_CICD.yml
+++ b/.github/workflows/test_CICD.yml
@@ -1,4 +1,4 @@
-name: Capstone_Project
+name: Capstone
 on:
   push:
     branches: [ main ]
@@ -17,20 +17,12 @@ jobs:
         java-version: 1.8
         
     - name: Install NDK
-      run: echo "y" | sudo /usr/local/lib/android/sdk/tools/bin/sdkmanager --install "ndk;20.0.5594570" --sdk_root=${ANDROID_SDK_ROOT}
+      run: ./gradlew test
       
-    - name: Build with Gradle
+    - name: Build Project
       run: ./gradlew build
 
     - name: build release 
       run: ./gradlew assembleRelease
-    - name: list files
-      run: ls -lrt app/build/outputs/apk/release
       
-    - name: upload artifact to Firebase App Distribution
-      uses: wzieba/Firebase-Distribution-Github-Action@v1.2.1
-      with:
-        appId: ${{secrets.FIREBASE_APP_ID}}
-        token: ${{secrets.FIREBASE_TOKEN}}
-        groups: testers
-        file: app/build/outputs/apk/release/app-release.apk
+      
