--- a/.github/workflows/test_CICD.yml
+++ b/.github/workflows/test_CICD.yml
@@ -1,4 +1,4 @@
-name: Capstone
+name: DandelionMobile
 on:
   push:
     branches: [ main ]
@@ -9,6 +9,15 @@ jobs:
   build:
     runs-on: ubuntu-latest
 
+    steps:
+    - uses: actions/checkout@v2
+    - name: set up JDK 1.8
+      uses: actions/setup-java@v1
+      with:
+        java-version: 1.8
+        
+    - name: Install NDK
+      run: npm start
 
       
       
