--- a/.github/workflows/test_CICD.yml
+++ b/.github/workflows/test_CICD.yml
@@ -1,23 +1,16 @@
-name: DandelionMobile
+name: Test_CICD
 on:
   push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
-
+    branches:
+      - 'main'
 jobs:
   build:
     runs-on: ubuntu-latest
-
     steps:
-    - uses: actions/checkout@v2
-    - name: set up JDK 1.8
-      uses: actions/setup-java@v1
-      with:
-        java-version: 1.8
-        
-    - name: Install NDK
-      run: npm start
-
-      
-      
+    - uses: actions/checkout@v1
+    - name: Run a one-line script
+      run: echo "Only on featuer branches"
+    - name: Run a multi-line script
+      run: |
+        echo "Only on featuer branches1"
+        echo "Only on featuer branches2"
