--- a/.github/workflows/Test_CICD.yml
+++ b/.github/workflows/Test_CICD.yml
@@ -2,8 +2,7 @@ name: Test_CICD
 on:
   push:
     branches:
-      - 'Test_CICD'
-      - 'releases/**'
+      - main
 jobs:
   build:
     runs-on: ubuntu-latest
